tests/NormalTests/paczka1/fuzzy1/27766159.err
Error in line 13: 0rCk8zwvk6 A440 66,4
Error in line 24: 0rCk8zwvk6 A317 45,1
Error in line 28: Igh S780 26,4
Error in line 39: S780 S780 48,91
